# inkfield

./: .gitignore  ai-system-design.md  ai-technical-design.md  砚田日耕产品设计文档_0706221409.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  health.py
backend/app/core/: __init__.py  clock.py  config.py  errors.py  exception_handlers.py  observability.py  schemas.py
backend/app/infrastructure/: __init__.py  redis.py
backend/app/infrastructure/celery/: __init__.py
backend/app/infrastructure/database/: __init__.py  session.py
backend/app/modules/: __init__.py
backend/app/modules/feedback/: __init__.py
backend/app/workers/: __init__.py
backend/evidence/: TASK-001-002.md  TASK-003-004.md  TASK-005-006.md  TASK-007-008.md
backend/migrations/: env.py
backend/migrations/versions/: 20260716_0001_baseline.py  20260716_0002_identity.py  20260716_0003_projects_route.py  20260716_0004_capacity_allocations.py  20260716_0005_weekplans_tasks.py
backend/scripts/: check_architecture.py
backend/tests/contract/: __init__.py  test_health_api.py  test_identity_api.py
backend/tests/e2e/: __init__.py
backend/tests/evaluation/: __init__.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py  test_architecture.py  test_capacity_allocation.py  test_clock.py  test_config.py  test_execution_schema_guards.py  test_idempotency.py  test_identity_service.py  test_observability.py  test_preferences.py  test_project_schema_guards.py  test_project_service.py  test_project_state_machine.py  test_task_events.py
(+68 files in other folders)
