[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "yantian-rigeng-backend"
version = "0.1.0"
description = "砚田日耕核心规划后端与 AI 编排服务"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic==1.14.0",
  "celery==5.4.0",
  "fastapi==0.115.6",
  "psycopg[binary,pool]==3.2.3",
  "PyJWT==2.10.1",
  "pydantic==2.10.4",
  "pydantic-settings==2.7.0",
  "redis==5.2.1",
  "sqlalchemy[asyncio]==2.0.36",
  "structlog==24.4.0",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.13.0",
  "pytest==8.3.4",
  "pytest-asyncio==0.25.0",
  "pytest-cov==6.0.0",
  "ruff==0.8.4",
  "testcontainers[postgres,redis]==4.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
  "integration: requires PostgreSQL and Redis",
  "contract: API or schema contract test",
  "evaluation: deterministic AI evaluation",
  "e2e: backend end-to-end workflow",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = ["celery.*", "jwt.*"]
ignore_missing_imports = true
